declare_args() {
    include_all_features = false
}

config("gbskia_config") {
  include_dirs = [
    "include/core",
    "include/effects",
    "include/images",
    "include/utils",
    "include/svg",
    "include/xml",
    "src/core",
  ]
  if (include_all_features) {
    defines = [
      "SK_FEATURE_PICTURE",
      "SK_FEATURE_TEXT_ON_PATH",
      "SK_FEATURE_PATH_CLIPPING",
      "SK_FEATURE_SAMPLER_BILINEAR",
      "SK_FEATURE_SAMPLER_REPEAT",
      "SK_FEATURE_SAMPLER_MIRROR",
      "SK_FEATURE_SAMPLER_CLAMP",
      "SK_FEATURE_MPROC_CLAMP",
      "SK_FEATURE_MPROC_REPEAT",
      "SK_FEATURE_MIPMAP",
      "SK_FEATURE_CONFIG_4444",
      "SK_FEATURE_CONFIG_565",
      "SK_FEATURE_CONFIG_A8",
      "SK_FEATURE_CONFIG_I8",
      "SK_FEATURE_MASK_3D",
      "SK_FEATURE_XFERMODE_EXTRA",
      "SK_FEATURE_XFERMODE_OPT",
      "SK_FEATURE_FLATTEN",
      "SK_FEATURE_TEXT",
      "SK_FEATURE_SAVELAYER",
      "SK_FEATURE_STRING",
      "SK_FEATURE_SHAPE",
      "SK_FEATURE_LOOPER",
      "SK_FEATURE_PATH_DUMP",
      "SK_FEATURE_DRAW_VERTICES",
    ]
  } else {
    # Include these features
    defines = [
      "SK_FEATURE_SAMPLER_CLAMP",
    ]
  }
  cflags = [ "-Wunused" ]
}

shared_library("gbskia") {
  sources = [
    "src/core/Sk64.cpp",
    "src/core/SkBuffer.cpp",
    "src/core/SkChunkAlloc.cpp",
    "src/core/SkCordic.cpp",
    "src/core/SkDebug.cpp",
    "src/core/SkFloatBits.cpp",
    "src/core/SkMath.cpp",
    "src/core/SkMatrix.cpp",
    "src/core/SkMemory_stdlib.cpp",
    "src/core/SkPoint.cpp",
    "src/core/SkRect.cpp",
    "src/core/SkRegion.cpp",
    "src/core/SkUtils.cpp",
    "src/core/SkAlphaRuns.cpp",
    "src/core/SkBitmap.cpp",
    "src/core/SkBitmapProcShader.cpp",
    "src/core/SkBitmapProcState.cpp",
    "src/core/SkBitmapProcState_matrixProcs.cpp",
    "src/core/SkBitmapSampler.cpp",
    "src/core/SkBlitRow_D32.cpp",
    "src/core/SkBlitter.cpp",
    "src/core/SkBlitter_A1.cpp",
    "src/core/SkBlitter_ARGB32.cpp",
    "src/core/SkBlitter_Sprite.cpp",
    "src/core/SkCanvas.cpp",
    "src/core/SkColor.cpp",
    "src/core/SkColorFilter.cpp",
    "src/core/SkColorTable.cpp",
    "src/core/SkComposeShader.cpp",
    "src/core/SkDeque.cpp",
    "src/core/SkDevice.cpp",
    "src/core/SkDither.cpp",
    "src/core/SkDraw.cpp",
    "src/core/SkEdge.cpp",
    "src/core/SkEdgeBuilder.cpp",
    "src/core/SkEdgeClipper.cpp",
    "src/core/SkFilterProc.cpp",
    "src/core/SkFlattenable.cpp",
    "src/core/SkGeometry.cpp",
    "src/core/SkGlobals.cpp",
    "src/core/SkGraphics.cpp",
    "src/core/SkLineClipper.cpp",
    "src/core/SkMask.cpp",
    "src/core/SkMaskFilter.cpp",
    "src/core/SkPaint.cpp",
    "src/core/SkPath.cpp",
    "src/core/SkPathEffect.cpp",
    "src/core/SkPathHeap.cpp",
    "src/core/SkPathMeasure.cpp",
    "src/core/SkPixelRef.cpp",
    "src/core/SkProcSpriteBlitter.cpp",
    "src/core/SkQuadClipper.cpp",
    "src/core/SkRasterizer.cpp",
    "src/core/SkRefCnt.cpp",
    "src/core/SkScan.cpp",
    "src/core/SkScan_AntiPath.cpp",
    "src/core/SkScan_Antihair.cpp",
    "src/core/SkScan_Hairline.cpp",
    "src/core/SkScan_Path.cpp",
    "src/core/SkShader.cpp",
    "src/core/SkSpriteBlitter_ARGB32.cpp",
    "src/core/SkStroke.cpp",
    "src/core/SkStrokerPriv.cpp",
    "src/core/SkTSearch.cpp",
    "src/core/SkUnPreMultiply.cpp",
    "src/core/SkXfermode.cpp",
    "src/core/SkWriter32.cpp",
    "src/images/SkImageDecoder_Factory.cpp",
    "src/images/SkImageEncoder_Factory.cpp",
    "src/opts/SkBlitRow_opts_none.cpp",
    "src/opts/SkBitmapProcState_opts_none.cpp",
    "src/ports/SkDebug_stdio.cpp",
    "src/ports/SkThread_pthread.cpp",
    "src/ports/SkGlobals_global.cpp",
    "src/ports/SkTime_Unix.cpp",
  ]

  if (include_all_features) {
    sources += [
      "src/core/SkPicture.cpp",
      "src/core/SkPictureFlat.cpp",
      "src/core/SkPicturePlayback.cpp",
      "src/core/SkPictureRecord.cpp",
      "src/core/SkRegion_path.cpp",
      "src/core/SkBlitRow_D4444.cpp",
      "src/core/SkBlitter_4444.cpp",
      "src/core/SkBlitRow_D16.cpp",
      "src/core/SkBlitter_RGB16.cpp",
      "src/core/SkSpriteBlitter_RGB16.cpp",
      "src/core/SkBlitter_A8.cpp",
      "src/ports/SkFontHost_android.cpp",
      "src/ports/SkFontHost_gamma.cpp",
      "src/ports/SkFontHost_FreeType.cpp",
      "src/ports/SkFontHost_tables.cpp",
      "src/core/SkGlyphCache.cpp",
      "src/core/SkMMapStream.cpp",
      "src/core/SkScalerContext.cpp",
      "src/core/SkStream.cpp",
      "src/ports/SkOSFile_stdio.cpp",
      "src/core/SkTypeface.cpp",
      "src/core/SkShape.cpp",
      "src/core/SkString.cpp",      
    ]
  }

  configs -= [ "//build/config/compiler:chromium_code" ]
  configs += [ "//build/config/compiler:no_chromium_code" ]
  # Disable hidden symbols, ensure all the code is exported
  configs -= [ "//build/config/gcc:symbol_visibility_hidden" ]
  configs += [ ":gbskia_config" ]

  deps = [
     #"//third_party/expat", # for xml parsing
     #"//third_party/freetype2",
     "//third_party/freetype2:ft2so",
  ]

  public_configs = [ ":gbskia_config" ]
}

executable("svg_test") {
    sources = [ "tests/svg_test.cpp" ]

    deps = [ ":gbskia" ]
}